# Dj_gamestore_db

./: .gitignore  pyproject.toml  requirements.txt  separate_db.sqlite3
config/: settings.py
gamestore_db/: apps.py  models.py
gamestore_db/migrations/: 0001_initial.py
gamestore_gui/: apps.py  config.py  database.py  main.py  views.py
gamestore_gui/widgets/: data_table.py  sidebar.py
