[project]
name = "gamestore-db"
version = "0.1.0"
description = "Test db to sync up with the gamestore website app"
authors = [
    {name = "Mustafa Prodhan",email = "mufassagit@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
